# ParkSense

./: .gitignore  README.md  detector.py  main.py  ocr.py  parser.py  pyproject.toml
android/: local.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/parksence/: MainActivity.kt
android/app/src/main/java/com/parksence/api/: LmStudioClient.kt
android/app/src/main/java/com/parksence/classifier/: SignClassifier.kt  SignExplainer.kt
android/app/src/main/java/com/parksence/detection/: ColorDetector.kt
android/app/src/main/java/com/parksence/ocr/: OcrProcessor.kt
android/app/src/main/java/com/parksence/parser/: ParkingParser.kt
android/app/src/main/java/com/parksence/ui/: ScanOverlayView.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml  item_sign_explanation.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
core/: detector.py  symbol_classifier.py
desktop/: main.py
desktop/core/: classifier.py  color_detector.py  detector.py  ocr.py  parser.py
pages/: batch_testing.py
server/: analyzer.py  main.py  pyproject.toml
training/: train.py
