[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt<4",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.1",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.41.0",
    # Apple Silicon — mlx inference
    "mlx-vlm>=0.4.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    # Linux / Windows / macOS Intel — transformers inference (auto-downloads model)
    "transformers>=4.48.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "torch>=2.0.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "accelerate>=0.26.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "qwen-vl-utils>=0.0.8; sys_platform != 'darwin' or platform_machine != 'arm64'",
    "bitsandbytes>=0.43.0; sys_platform != 'darwin' or platform_machine != 'arm64'",
]
